Some optimisation with a commATGService

--- a/src/app/component/collaborateurs/collaborateurs.component.html
+++ b/src/app/component/collaborateurs/collaborateurs.component.html
@@ -91,7 +91,7 @@
 
 <p-dialog [(visible)]="displayDialog" [responsive]="true" [modal]="true" [styleClass]="'importcsv'">
     <p-header>
-        <span style="display:inline-block; width:80%">{{title}}</span><span style="display:inline-block">Statut "{{allstatusidx[selectedCollaborateur['statutCollab']]}}" - Version {{selectedCollaborateur['versionCollab']}}</span>
+        <span style="display:inline-block; width:80%">{{title}}</span><span style="display:inline-block">Statut "{{allstatus[selectedCollaborateur['statutCollab']]}}" - Version {{selectedCollaborateur['versionCollab']}}</span>
     </p-header>
     <div class="ui-g ui-fluid">
 
